File: components/nexus-rest/src/main/java/org/sonatype/nexus/rest/ValidationErrorsException.java